ErrorMessages.txt
Greet.java:20: error: class Grreet is public, should be
 declared in a file named Grreet.java
Error: Main method not found in class BigSib, please define the main method as:
   public static void main(String[] args)
or a JavaFX application class must extend javafx.application.Application
Greet.java:3: error: cannot access BigSib
        BigSib.greet("Flim");
        ^
  bad source file: ./BigSib.java
    file does not contain class BigSib

